<resources>
    <string name="app_name">GLVideo</string>
    <string name="title_capture">Capture</string>
    <string name="title_video">Video</string>
    <string name="title_advanced">Advanced</string>

    <!-- Section Capture -->
    <string name="button_text_camera_preview">camera preview (GLSurfaceView + cameraX)</string>
    <string name="button_text_camera_preview_custom">camera preview (CustomSurfaceView + cameraX)</string>
    <string name="button_text_camera_preview_with_effects">camera preview with effects</string>
    <string name="button_text_picture_taking">picture taking</string>
    <string name="button_text_video_recording">video recording</string>

    <!-- Section Video -->
    <string name="button_text_video_decode">video decode + CustomSurfaceView</string>
    <string name="button_text_gif_to_mp4">gif to mp4</string>
    <string name="button_text_add_video_bgm">add video bgm</string>
    <string name="button_text_add_video_ending">add video ending</string>
    <string name="button_text_add_watermark">add watermark overlay</string>
    <string name="button_text_merge_video_files">merge video files</string>
    <string name="button_text_video_crop">video crop</string>

    <!-- Section Advanced -->
    <string name="button_text_3d_namecard">3D namecard</string>
    <string name="button_text_3d_namecard_with_video_bkg">3D namecard (with video background)</string>
    <string name="button_text_video_cut_widget">video-cut widget</string>
    <string name="button_text_screen_sharing">screen sharing</string>

    <string name="button_text_take_picture">Take Picture</string>
    <string name="button_text_start_recording">Start Recording</string>
    <string name="button_text_stop_recording">Stop Recording</string>

    <string name="button_text_convert">Convert</string>
    <string name="button_text_select_video">Select Video</string>

    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_confirm">Confirm</string>
    <string name="settings_title">Settings</string>

    <string name="add_watermark_title">the watermark</string>
    <string name="add_watermark_subtitle">build by binbo</string>

    <string name="add_video_ending_title">the video ending</string>
    <string name="add_video_ending_subtitle">build by binbo</string>

    <string name="text_my_name">BinBo</string>
    <string name="text_my_nickname">(bigbugbb)</string>
    <string name="text_namecard_title">My NameCard</string>

    <string name="picture_taking_successful_message">new picture saved to gallery</string>
    <string name="video_recording_successful_message">new video saved to gallery</string>

    <string name="select_video_time_toast">Videos must be longer than 2 seconds.</string>
    <string name="system_need_photos_permission">App needs access to your photos. Turn it on in Settings. </string>
    <string name="camera_permission_popup_title">App needs camera permission. Go to settings and grant access.</string>
    <string name="no_permission_toast">Camera and Files permissions needed. Please turn them on in settings and try again.</string>

</resources>