<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingBottom="100dp"
    tools:context=".ui.video.fragment.VideoFragment">

    <Button
        android:id="@+id/btnVideoDecode"
        style="@style/ButtonStyle"
        android:text="@string/button_text_video_decode" />

    <Button
        android:id="@+id/btnGifToMp4"
        style="@style/ButtonStyle"
        android:text="@string/button_text_gif_to_mp4" />

    <Button
        android:id="@+id/btnAddVideoBgm"
        style="@style/ButtonStyle"
        android:text="@string/button_text_add_video_bgm" />

    <Button
        android:id="@+id/btnAddVideoEnding"
        style="@style/ButtonStyle"
        android:text="@string/button_text_add_video_ending" />

    <Button
        android:id="@+id/btnAddWatermark"
        style="@style/ButtonStyle"
        android:text="@string/button_text_add_watermark" />

</LinearLayout>