<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingBottom="100dp"
    tools:context=".ui.capture.fragment.CaptureFragment">

    <Button
        android:id="@+id/btnCameraPreview"
        style="@style/ButtonStyle"
        android:text="@string/button_text_camera_preview" />

    <Button
        android:id="@+id/btnCameraPreviewCustom"
        style="@style/ButtonStyle"
        android:text="@string/button_text_camera_preview_custom" />

    <Button
        android:id="@+id/btnCameraPreviewWithEffect"
        style="@style/ButtonStyle"
        android:text="@string/button_text_camera_preview_with_effects" />

    <Button
        android:id="@+id/btnPictureTaking"
        style="@style/ButtonStyle"
        android:text="@string/button_text_picture_taking" />

    <Button
        android:id="@+id/btnVideoRecording"
        style="@style/ButtonStyle"
        android:text="@string/button_text_video_recording" />

</LinearLayout>