<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_video">

    <fragment
        android:id="@+id/navigation_capture"
        android:name="com.binbo.glvideo.sample_app.ui.capture.fragment.CaptureFragment"
        android:label="@string/title_capture"
        tools:layout="@layout/fragment_capture" />

    <fragment
        android:id="@+id/navigation_video"
        android:name="com.binbo.glvideo.sample_app.ui.video.fragment.VideoFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/navigation_advanced"
        android:name="com.binbo.glvideo.sample_app.ui.advanced.AdvancedFragment"
        android:label="@string/title_advanced"
        tools:layout="@layout/fragment_advanced" />

</navigation>